@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-01T16:28:40Z",
+  "timestamp" : "2022-06-02T01:46:58Z",
   "count_outdated" : 2118,
   "uniques_outdated" : 407,
-  "count" : 2154,
+  "count" : 2155,
   "uniques" : 431,
   "clones" : [
     {
@@ -63,8 +63,8 @@
     },
     {
       "timestamp": "2022-06-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
