@@ -1,5 +1,5 @@
 {
-  "count": 36,
+  "count": 37,
   "uniques": 15,
   "clones": [
     {
@@ -44,7 +44,7 @@
     },
     {
       "timestamp": "2022-06-01T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
