@@ -1,3 +1,10 @@
+2022-06-02T01:46:58Z:
+* notice: last 14d: unq all: 15 37
+* notice: prev accum: outdated-unq outdated-all / unq all: 407 2118 / 431 2154
+* notice: next accum: outdated-unq outdated-all / unq all: 407 2118 / 431 2155
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-06-01]
+
 2022-06-01T16:28:40Z:
 * notice: last 14d: unq all: 15 36
 * notice: prev accum: outdated-unq outdated-all / unq all: 406 2117 / 431 2154
